Dark mode fixed?

--- a/style.css
+++ b/style.css
@@ -1,6 +1,18 @@
 h1 {
   text-align: center;
  }
+
+ body {
+  padding: 25px;
+  background-color: white;
+  color: black;
+  font-size: 25px;
+ }
+
+.dark-mode {
+  background-color: #333;
+  color: white;
+}
  
  #game-board {
    display: flex;
